<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/root_layout"
android:background="@color/bg_grey"
tools:context=".ActivityLogin">

    <include
        android:id="@+id/chtl_toolbar"
        layout="@layout/toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/loginMsg"
            android:textAlignment="center"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="Phone number or Email"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="26dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/email_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterUserEmail"
                android:padding="4dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/iconspassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterUserPwd"
                android:padding="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background2"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="LOGIN"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Forgot_password"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="OR"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Register_account"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:background="@drawable/register_btn"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/RifarlyGreyhigh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/poweredBy"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/hint_EndMsg"
            android:textAlignment="center"
            android:textColor="@color/colorGrey88" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/rifarlylogo" />
    </LinearLayout>


</RelativeLayout>