<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_welcome">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".5"
            android:layout_above="@id/layoutDots"
            android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="188dp"
        android:layout_height="46dp"
        android:layout_below="@+id/layoutDots"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_background"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/msg"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:layout_below="@+id/textsignup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_background2"
        android:text="@string/LOGIN"
        android:textColor="@color/white"
        android:textSize="18sp" />

    </RelativeLayout>