<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".ActivityPassword">

    <include
        android:id="@+id/navtoolbarlayout"
        layout="@layout/toolbarlayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="Create your password to secure your account"
            android:textAlignment="center"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterUserEmail"
                android:padding="4dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="Confirm Password"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="358dp"
                android:layout_height="match_parent"
                android:hint="@string/hint_enterUserPwd"
                android:padding="4dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorAccent"
                app:shapeAppearance="@style/Cut">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background2"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="CONFIRM"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/poweredBy"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/hint_EndMsg"
            android:textAlignment="center"
            android:textColor="@color/colorGrey88" />

    </LinearLayout>


</RelativeLayout>